will fix header spacing on landing page to match home page

--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -1,3 +1,7 @@
 .mat-step-header .mat-step-icon-selected, .mat-step-header .mat-step-icon-state-done, .mat-step-header .mat-step-icon-state-edit {
   background-color: red !important;
 }
+
+header {
+  margin-top: 0;
+}
